[gd_scene load_steps=2 format=2]

[ext_resource path="res://Scripts/spawn_enemigos.gd" type="Script" id=1]

[node name="Spawner" type="Node2D"]
script = ExtResource( 1 )

[node name="Spawn_timer" type="Timer" parent="."]
wait_time = 10.0

[node name="Break_timer" type="Timer" parent="."]

[connection signal="timeout" from="Spawn_timer" to="." method="_on_Spawn_timer_timeout"]
[connection signal="timeout" from="Break_timer" to="." method="_on_Break_timer_timeout"]
